manifests/appointments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointments-deployment
  labels:
    app: appointments-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointments-deployment
  template:
    metadata:
      labels:
        app: appointments-deployment
    spec:
      serviceAccountName: appointments-sa
      containers:
      - name: webserver
        image: <AWS_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/containers-image-repository:background-color-updated-to-orange
        imagePullPolicy: Always
        ports:
        - containerPort: 8088
