manifests/appointments-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appointments-deployment
  name: appointments-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: appointments-deployment
  type: NodePort
