manifests/appointments-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appointments-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: appointments-service
              port:
                number: 80
